# generic-simd

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
generic-simd/: Cargo.toml
generic-simd-dispatch-test/: Cargo.toml
generic-simd-dispatch-test/src/: lib.rs
generic-simd-macros/: Cargo.toml  README.md
generic-simd-macros/src/: lib.rs
generic-simd-test/: Cargo.toml  webdriver.json
generic-simd-test/src/: lib.rs
generic-simd-test/tests/: vector.rs
generic-simd/src/: alignment.rs  generic.rs  implementation.rs  lib.rs  pointer.rs  scalar.rs  shim.rs  slice.rs  vector.rs  x86.rs
generic-simd/src/arch/: generic.rs  mod.rs  x86.rs
generic-simd/src/arch/arm/: complex.rs  mod.rs
generic-simd/src/arch/wasm/: complex.rs  mod.rs
generic-simd/src/arch/wasm32/: complex.rs  mod.rs
generic-simd/src/arch/x86/: complex.rs  mod.rs
generic-simd/src/shim/: mod.rs  token.rs  width.rs
generic-simd/src/vector/: mod.rs  pointer.rs  scalar.rs  slice.rs  width.rs
generic-simd/tests/: vector.rs
safe-simd/: Cargo.toml
safe-simd-dispatch-test/: Cargo.toml
safe-simd-dispatch-test/src/: lib.rs
safe-simd-macros/: Cargo.toml
safe-simd-macros/src/: lib.rs
safe-simd/src/: generic.rs  implementation.rs  lib.rs  shim.rs  slice.rs  vector.rs  x86.rs
safe-simd/tests/: vector.rs
src/: generic.rs  implementation.rs  lib.rs  slice.rs  vector.rs  x86.rs
