[package]
name = "generic-simd-macros"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Implementation crate for generic-simd"
repository = "https://github.com/calebzulawski/generic-simd"
categories = []
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]
edition = "2018"

[features]
default = []
nightly = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
