[package]
name = "generic-simd-test"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"
publish = false

[features]
default = ["std", "complex"]
std = ["generic-simd/std"]
complex = ["generic-simd/complex"]
alloc = ["generic-simd/alloc"]
nightly = ["generic-simd/nightly"]

[dependencies]
generic-simd = { path = "../generic-simd", default-features = false }
num-complex = { version = "0.3", default-features = false, features = ["rand"] }
num-traits = "0.2"
rand = "0.7"
rand_pcg = "0.2"
paste = "1"
wasm-bindgen-test = "0.3"

[dev-dependencies]
