[package]
name = "generic-simd"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"

[features]
default = ["std", "complex"]
std = ["multiversion/std"]
alloc = []
complex = ["num-complex"]

[dependencies]
num-complex = { version = "0.3", default-features = false, optional = true }
generic-simd-macros = { version = "0.1", path = "../generic-simd-macros" }
multiversion = { version = "0.6", default-features = false }
