[package]
name = "generic-simd"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "safe and idiomatic zero-cost abstractions for writing explicit cross-platform SIMD operations"
repository = "https://github.com/calebzulawski/generic-simd"
categories = ["no-std", "api-bindings", "hardware-support"]
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]
edition = "2018"

[features]
default = ["std", "complex"]
std = ["multiversion/std"]
complex = ["num-complex"]
alloc = []
nightly = ["generic-simd-macros/nightly"]

[dependencies]
num-complex = { version = "0.3", default-features = false, optional = true }
generic-simd-macros = { version = "0.1", default-features = false, path = "../generic-simd-macros" }
multiversion = { version = "0.6.1", default-features = false }

[package.metadata.docs.rs]
features = ["nightly", "complex", "alloc"]
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "i686-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "armv7-unknown-linux-gnueabihf",
    "wasm32-unknown-unknown",
]
rustdoc-args = ["-Ctarget-feature=+simd128"]
