[package]
name = "safe-simd"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
num-complex = { version = "0.2", default-features = false }
safe-simd-macros = { path = "../safe-simd-macros" }
arch-types = { git = "https://github.com/calebzulawski/arch-types" }

[dev-dependencies]
num-complex = { version = "0.2", features = ["rand"] }
rand = "0.5"
num-traits = "0.2"
